--- a/contents/generalities/04-bias-variance.qmd
+++ b/contents/generalities/04-bias-variance.qmd
@@ -14,12 +14,12 @@ Cette section est basée sur @jamesIntroductionStatisticalLearning2021, chapitre
 
 Supposons que l'on observe une variable réponse, notée $Y$, pouvant être quantitative, qualitative ou autre et $p$ variables explicatives, notées $X_{1}, \dots, X_{p}$, pouvant aussi être quantitatives, qualitatives ou autres. On suppose aussi qu'il existe une certaine relation entre $Y$ et $X = (X_{1}, \dots, X_{p})$. Cette relation peut s'écrire de façon gérérale comme 
 $$Y = f(X) + \epsilon.$$ {#eq-model}
-Ici, $f$ est une fonction de $X_{1}, \dots, X_{p}$ que l'on souhaite estimer à l'aide des données et $\epsilon$ est un terme d'erreur. Dans le cadre de ce cours, on supposera que $\epsilon$ est indépendent de $X$ et sa moyenne est nulle. Le modèle @eq-model est un modèle général dans le sens où tout ce que l'on va faire peut s'écrire sous cette forme, bien que l'on ne soit pas toujours capable de donner une équation pour $f$. La fonction $f$ représente l'information systématique que $X$ donne à propos de $Y$.
+Ici, $f$ est une fonction de $X_{1}, \dots, X_{p}$ que l'on souhaite estimer à l'aide des données et $\varepsilon$ est un terme d'erreur. Dans le cadre de ce cours, on supposera que la variable aléatoire $\varepsilon$ est indépendente de $X$ et que sa moyenne est nulle et sa variance $\sigma^2$. Le modèle @eq-model est un modèle général dans le sens où tout ce que l'on va faire dans le cadre de ce cours peut s'écrire sous cette forme, bien que l'on ne soit pas toujours capable de donner une équation pour $f$. La fonction $f$ représente l'information systématique que $X$ donne à propos de $Y$. La @fig-model présente les différents éléments du modèle de façon visuel.
 
 
 ```{r}
 #| label: fig-model
-#| fig-cap: "Différent éléments du modèle. Les points représentent les données observées $(X, Y)$. La courbe bleue représente la fonction $f$ et les lignes pointillées représentent l'erreur associée à chaque observation."
+#| fig-cap: "Les différents éléments du modèle. Les points représentent les données observées $(X, Y)$. La courbe bleue représente la fonction $f$ et les lignes pointillées représentent l'erreur associée à chaque observation."
 #| warning: false
 #| eval: true
 
@@ -57,7 +57,7 @@ ggplot(data, aes(x, y)) +
 
 ```
 
-Dans la suite du cours, on verra quelques méthodes permettant d'estimer la fonction $f$. Avant de voir comment estimer $f$, on va supposer que l'on a déjà un estimateur, noté $\widehat{f}$, estimé à partir de $n$ observations de $(X, Y)$ et on va s'intéresser à la qualité de cet estimateur. 
+Dans la suite du cours, on verra quelques méthodes permettant d'estimer la fonction $f$. Cependant avant de voir comment estimer $f$, on va supposer que l'on a déjà un estimateur, noté $\widehat{f}$, estimé à partir de $n$ observations de $(X, Y)$ et on va s'intéresser à la qualité de cet estimateur. 
 
 ::: {.callout-note icon=false}
 ## Exemple : la régression linéaire simple 
@@ -69,18 +69,25 @@ Dans le cadre de la régression linéaire simple, on fait l'hypothèse que la fo
 ::: {.callout-tip icon=false}
 ## Remarque : Compromis exactitude / interprétabilité 
 
-Dépendent de l'objectif de l'étude, on peut devoir faire un choix entre l'exactitude de nos prédictions et l'interprétabilité de notre modèle. En effet, si on restreint notre modèle à être linéaire, nos paramètres seront interprétables et même visualisable, mais ce sera peut-être au détriment du pouvoir prédictif du modèle, e.g. si la vraie relation entre $X$ et $Y$ n'est pas linéaire. Inversement, un modèle pouvant estimer des relations plus compliqué (et donc plus flexible) aura plus de paramètres et donc sera plus difficile à interpréter. 
+Dépendent de l'objectif de l'étude, on peut devoir faire un choix entre l'exactitude de nos prédictions et l'interprétabilité de notre modèle. En effet, si on restreint notre modèle à être linéaire, nos paramètres seront interprétables et même visualisable, mais ce sera peut-être au détriment du pouvoir prédictif du modèle, e.g. si la "vraie" relation entre $X$ et $Y$ n'est pas linéaire. Inversement, un modèle pouvant estimer des relations plus compliqué (et donc plus flexible) aura plus de paramètres et donc sera plus difficile à interpréter. 
+
+:::
+
+::: {.callout-tip icon=false}
+## Remarque : *No free lunch in statistics*
+
+On pourrait se demander pourquoi cette discussion sur différents estimateurs de $f$ et la mesure de leur qualité d'ajustement. En effet, pourquoi ne pas juste consider un unique "meilleur" modèle ? La réponse est simple : il n'existe pas de méthode qui domine toutes les autres sur tous les jeux de données. Ainsi, une méthode peut très bien fonctionner sur un certain jeu de données et pas du tout sur d'autre jeu de données. Et même en ne considérant qu'un jeu de données, en fonction de l'objectif de l'étude (explication, prédiction, classification, ...), le meilleur modèle peut être différent.
 
 :::
 
 ## Mesurer la qualité de l'ajustement
 
-Pour évaluer la qualité de notre estimateur $\widehat{f}$, on a besoin d'une mesure nous indiquant à si nos prédictions, $\widehat{y}$, sont proches des données observées. Dit autrement, on cherche à quantifier si la réponse prédite pour chaque observation est proche de la vraie réponse pour cette observation.
+Pour évaluer la qualité de notre estimateur $\widehat{f}$, on a besoin d'une mesure nous indiquant si nos prédictions, $\widehat{Y} = \widehat{f}(X)$, sont proches des données observées. Dit autrement, on cherche à quantifier si la réponse prédite pour chaque observation est proche de la vraie réponse pour cette observation.
 
 ::: {.callout-warning icon=false}
 ## Définition : Erreur quadratique moyenne 
 
-Dans le cas où $Y$ est une variable quantitative, une mesure de la qualité de $\widehat{f}$ est l'**erreur quadratique moyenne** (*mean square error*, MSE). Celle-ci est défini comme 
+Dans le cas où $Y$ est une variable quantitative, une mesure de la qualité de l'estimateur $\widehat{f}$ est l'**erreur quadratique moyenne** (*mean square error*, MSE). Celle-ci est définie comme 
 $$MSE(Y, \widehat{Y}) = \frac{1}{n} \sum_{i = 1}^{n} \left( y_i - \widehat{y}_i\right)^2 = \frac{1}{n} \sum_{i = 1}^{n} \left( y_i - \widehat{f}(x_i) \right)^2,$$
 où $\widehat{y}_i = \widehat{f}(x_i)$ est la prédiction que $\widehat{f}$ donne pour l'observation $i$.
 
@@ -88,6 +95,80 @@ où $\widehat{y}_i = \widehat{f}(x_i)$ est la prédiction que $\widehat{f}$ donn
 
 L'idée est que la MSE sera petite si les réponses prédites sont proches des vraies réponses et grande si elles ne le sont pas. On peut aussi voir la MSE comme une mesure de la distance moyenne entre les vraies valeurs et les valeurs prédites. On cherche donc à avoir une distance moyenne petite.  
 
+L'erreur quadratique moyenne est une bonne mesure dans le cas de variables quantitatives, cependant, elle n'est pas utilisable avec des variables qualitatives. Dans ce cas, une mesure populaire est le taux d'erreur.
+
+::: {.callout-warning icon=false}
+## Définition: Taux d'erreur 
+
+Dans le cas où $Y$ est une variable qualitative, une mesure de la qualité de l'estimateur $\widehat{f}$ est le **taux d'erreur** (*error rate*, ER). Celle-ci est définie comme 
+$$ER(Y, \widehat{Y}) = \frac{1}{n} \sum_{i = 1}^{n} \mathbb{1}(y_i \neq \widehat{y}_i) = \frac{1}{n} \sum_{i = 1}^{n} \mathbb{1}(y_i \neq \widehat{f}(x_i)).$$
+où $\widehat{y}_i = \widehat{f}(x_i)$ est la prédiction que $\widehat{f}$ donne pour l'observation $i$.
+
+:::
+
+Dans la même idée que la MSE, l'ER est la proportion d'erreur qui sont faites par l'estimateur $\widehat{f}$. C'est aussi une mesure de la distance moyenne entre les vraies valeurs et les valeurs prédites.
+
+
+## Compromis biais/variance
+
+Lorsque l'on cherche à minimiser l'erreur quadratique moyenne (ou le taux d'erreur), on cherche à le faire sur les données observées, mais aussi sur les éventuelles futures observations de même processus. Il se trouve que, après avoir choisi un estimateur $\widehat{f}$, on peut décomposer l'espérance de l'erreur en trois quantités : un terme de biais de $\widehat{f}$ au carré, un terme de variance de $\widehat{f}$ et un terme correspondant à la variance de l'erreur $\sigma^2$.
+
+
+::: {.callout-important icon=false}
+## Compromis biais/variance 
+
+Ayant un estimateur $\widehat{f}$ de $f$, l'espérance de l'erreur de l'estimateur peut se décomposer de la façon suivante :
+
+$$\mathbb{E}\left[ (Y - \widehat{Y})^2 \right] = \mathbb{E}\left[ (Y - \widehat{f}(X))^2 \right] = \mathrm{Var}(\widehat{f}(X)) + \mathrm{Biais}(\widehat{f}(X))^2 + \sigma^2.$$
+:::
+
+::: {.callout-note icon=false collapse=true}
+## Preuve
+
+Tout d'abord, montrons que l'espérance de l'erreur de l'estimateur se décompose en une partie réductible et en une partie irréductible. 
+
+\begin{align*}
+\mathbb{E}\left[ \left( Y - \widehat{Y} \right)^2 \right]
+ &= \mathbb{E}\left[ \left( Y - \widehat{f}(X) \right)^2 \right] \\
+ &= \mathbb{E}\left[ \left( f(X) + \varepsilon - \widehat{f}(X) \right)^2 \right] \\
+ &= \mathbb{E}\left[ \left( f(X) - \widehat{f}(X) \right)^2 \right] + 2\mathbb{E}\left[ \left( f(X) - \widehat{f}(X) \right)\varepsilon \right] + \mathbb{E}[\varepsilon^2] \\
+ &= \mathbb{E}\left[ \left( f(X) - \widehat{f}(X) \right)^2 \right] + 2\mathbb{E}\left[ \left( f(X) - \widehat{f}(X) \right) \right] \underbrace{\mathbb{E}\left[ \varepsilon \right]}_{= 0} + \sigma^2 \\
+ &= \underbrace{\mathbb{E}\left[ \left( f(X) - \widehat{f}(X) \right)^2 \right]}_{\text{réductible}} + \underbrace{\sigma^2}_{\text{irréductible}}.
+\end{align*}
+
+On utilise la linéarité de l'espérance et le fait que $X$ et $\varepsilon$ soient indépendants. On s'intéresse maintenant à la partie "réductible". L'astuce est de faire apparaître $\mathbb{E}\left[ \widehat{f}(X) \right]$.
+
+\begin{align*}
+\mathbb{E}\left[ \left( f(X) - \widehat{f}(X) \right)^2 \right]
+  &= \mathbb{E}\left[ \left( f(X) - \mathbb{E}\left[ \widehat{f}(X) \right] + \mathbb{E}\left[ \widehat{f}(X) \right] - \widehat{f}(X) \right)^2 \right] \\
+  &= \underbrace{\mathbb{E}\left[ \left( f(X) - \mathbb{E}\left[ \widehat{f}(X) \right] \right)^2 \right]}_{\text{A}} \\
+  &\quad - 2 \underbrace{\mathbb{E}\left[ \left( f(X) - \mathbb{E}\left[ \widehat{f}(X) \right] \right) \left( \widehat{f}(X) - \mathbb{E}\left[ \widehat{f}(X) \right] \right) \right]}_{\text{B}} \\
+  &\quad + \underbrace{\mathbb{E}\left[ \left( \widehat{f}(X) - \mathbb{E}\left[ \widehat{f}(X) \right] \right)^2 \right]}_{\text{C}}.
+\end{align*}
+
+
+A. La fonction $f(X)$ n'étant pas aléatoire, on a $\mathbb{E}\left[ f(X) \right] = f(X)$ et donc 
+
+\begin{align*}
+\mathbb{E}\left[ \left( f(X) - \mathbb{E}\left[ \widehat{f}(X) \right] \right)^2 \right]
+  &= \mathbb{E}\left[ \left( \mathbb{E}\left[ f(X) - \widehat{f}(X) \right] \right)^2 \right] \\
+  &= \mathbb{E}\left[ f(X) - \widehat{f}(X) \right]^2 \\ 
+  &= \text{Biais}(\widehat{f}(X))^2.
+\end{align*}
+
+B. En développant l'expression et en utilisant l'indépendance des variables, on trouve que $B = 0$. 
+
+C. En utilisant la définition de la variance,
+
+$$\mathbb{E}\left[ \left( \widehat{f}(X) - \mathbb{E}\left[ \widehat{f}(X) \right] \right)^2 \right] = \mathrm{Var}(\widehat{f}).$$
+
+Finalement, on a
+
+$$\mathbb{E}\left[ \left( f(X) - \widehat{f}(X) \right)^2 \right] = \text{Biais}(\widehat{f}(X))^2. + \mathrm{Var}(\widehat{f}(X)).$$
+
+D'où le résultat.
+
+:::
 
 
 ```{r}
@@ -213,60 +294,4 @@ ggplot(results_long, aes(x = span, y = value, color = component)) +
   theme_minimal(base_size = 14)
 
 ```
-
-## Compromis biais/variance
-
-::: {.callout-important icon=false}
-## Compromis biais/variance 
-
-$$\mathbb{E}\left[ (Y - \widehat{Y})^2 \right] = \mathrm{Var}(\widehat{Y}) + \left( Y - \mathbb{E}(\widehat{Y}) \right)^2 + \sigma^2.$$
-:::
-
-::: {.callout-note icon=false collapse=true}
-## Preuve
-
-\begin{align*}
-\mathbb{E}\left[ \left( Y - \widehat{Y} \right)^2 \right]
- &= \mathbb{E}\left[ \left( Y - \widehat{f}(X) \right)^2 \right] \\
- &= \mathbb{E}\left[ \left( f(X) + \varepsilon - \widehat{f}(X) \right)^2 \right] \\
- &= \mathbb{E}\left[ \left( \underbrace{f(X) - \widehat{f}(X)}_{\text{erreur estimation}} + \varepsilon \right)^2 \right] \\
- &= \mathbb{E}\left[ \left( f(X) - \widehat{f}(X) \right)^2 \right] \\
-  &~+ 2\mathbb{E}\left[ \left( f(X) - \widehat{f}(X) \right)\varepsilon \right] \\
-  &~+ \mathbb{E}[\varepsilon^2].
-\end{align*}
-
-
-:::
-
-
-On peut mesurer deux fonctions qui vont nous aider:
-
-* Fonction de perte ($L$): c'est la mesure de l'écart par rapport à ce qu'on souhaite mesurer, par example:
-$$L(Y, f(X)) = (Y - f(X))^2.$$
-
-* Fonction de risque : c'est la quantité que l'on cherche à minimiser. Il s'agit de l'espérance de la fonction de perte.
-
-Comment trouver $f$:
-
-Objectif: Trouver une fonction $\widehat{f}$ qui minimise le risque.
-
-Comment: Supposer une certaine forme pour $f(X)$ et minimiser la fonction de perte de fa\c{c}on analytique ou numérique.
-
-  * Paramétrique: On donne une forme explication à $f(X)$ qui dépend de paramètres. On cherche une méthode d'estimation des paramètres.
-
-  * Non-paramétrique: aucune forme forme particulière de $f$, on estime une courbe ou fonction.
-
-
-## Un mot sur le cas de variables qualitatives
-
-On cherche à prédire $G$ (un groupe ou facteur) à partir de $X$. Supposons que nous avons $\widehat{G}$ qui prédise le classe des observations sachant $X$, alors on peut définir la fonction de perte (0-1) comme le nombre d'erreur que l'on a effectué:
-$$L(G, \widehat{G}) = \mathbb{1}_{G \neq \widehat{G}}.$$
-
-Avec cette fonction de perte 0-1, $\widehat{G}(x)$ est la classe $g$ qui maximise $\mathbb{P}(g | X = x)$.
-
-On peut décomposer l'erreur quadratique moyenne (EQM):
-$$\mathbb{E}\left( (Y - \widehat{f}(x_0))^2 \right) = \text{Biais}(\widehat{f}(x_{0}))^2 + \mathrm{Var}(\widehat{f}(x_{0}) + \sigma^2_{\epsilon}.$$
-
-Démontrer la décomposition de l'EQM en un compromis biais variance.
-
 
